--- a/src/css/car.css
+++ b/src/css/car.css
@@ -1,15 +1,18 @@
 @charset "UTF-8";
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   text-decoration: none;
   list-style: none;
 }
 
-#main {
-  width: 1000px;
-  margin: 0 auto;
-  /* background: lightcyan; */
+.headerstyle, #header .headerBox .headerBox-left > a, #header .headerBox .headerBox-center > a, #header .headerBox .headerBox-login > a, #header .headerBox .order > a {
+  color: #989898;
+  font-size: 14px;
+  line-height: 44px;
+  display: block;
+  float: left;
+  text-decoration: none;
 }
 
 .footer-p, #footer .footerMain .footer-promise .footer-p1, #footer .footerMain .footer-promise .footer-p2, #footer .footerMain .footer-promise .footer-p3, #footer .footerMain .footer-promise .footer-p4 {
@@ -46,103 +49,233 @@
   text-align: center;
 }
 
-/*logo部分*/
-.logo {
-  margin: 24px 0 99px 0;
-  height: 51px;
-  /* background: lightcoral; */
+/* header部分 */
+#header {
+  width: 100%;
+  height: 44px;
+  background: #323436;
 }
-.logo a {
-  display: inline-block;
+#header .headerBox {
+  width: 1200px;
+  height: 44px;
+  margin: 0 auto;
+}
+#header .headerBox .headerBox-left {
   float: left;
-  text-decoration: none;
 }
-.logo img {
+#header .headerBox img {
+  float: left;
   display: block;
 }
-.logo span {
-  display: inline-block;
-  height: 51px;
-  color: #231815;
-  font-size: 20px;
-  line-height: 70px;
-  padding-left: 20px;
+#header .headerBox .headerBox-left > a {
+  padding: 0 19px;
+}
+#header .headerBox .headerBox-left > a:hover {
+  color: #fff;
+}
+#header .headerBox .headerBox-center {
+  float: left;
+}
+#header .headerBox .headerBox-center > a {
+  padding: 0 19px;
+}
+#header .headerBox .headerBox-center > a:hover {
+  color: #fff;
+}
+#header .headerBox .headerBox-login > a:hover {
+  color: #fff;
+}
+#header .headerBox .headerBox-login .one {
+  width: 100px;
+  padding: 0 19px;
+}
+#header .headerBox .headerBox-login .two {
+  padding: 0 19px;
+}
+#header .headerBox .order > a {
+  padding: 0 19px;
+}
+#header .headerBox .order > a:hover {
+  color: #fff;
+}
+#header .headerBox .cart {
+  position: relative;
+  float: right;
+}
+#header .headerBox .cart i {
+  display: block;
+  width: 21px;
+  height: 16px;
+  position: absolute;
+  left: 38px;
+  top: 16px;
+  background: url(http://mobile.snail.com/static/common/images/nav-icon.png) -50px 0 no-repeat;
+}
+#header .headerBox .cart a {
+  width: 110px;
+  height: 43px;
+  line-height: 43px;
+  border: 1px solid #232426;
+  border-bottom: 0;
+  display: block;
+  padding-left: 68px;
+  color: #989898;
+  font-size: 14px;
+  text-decoration: none;
+  background: #232426;
+}
+#header .headerBox .cart a:hover {
+  color: red;
+  text-decoration: un;
 }
 
-/*表单上的文字部分*/
-#menu {
-  width: 1000px;
-  /* background: lightgreen; */
-}
-#menu h3 {
-  font-size: 24px;
-  font-weight: bold;
-  color: #222222;
-  text-align: center;
-  line-height: 1;
-  margin-bottom: 68px;
-}
-#menu .loginBox {
-  height: 25px;
-  width: 300px;
-  /* background: lightseagreen; */
-  margin: 0 0 0 348px;
-  position: relative;
-}
-#menu .loginBox span {
-  font-size: 17px;
-  color: #666666;
-}
-#menu .loginBox p {
-  position: absolute;
+/*侧边栏工具条*/
+#sideBar {
+  width: 45px;
+  height: 100%;
+  position: fixed;
   right: 0;
   top: 0;
-  font-size: 14px;
-  color: #999999;
+  min-height: 100%;
+  background-color: #e0e0e0;
 }
-#menu a {
-  color: #fd8900;
-  text-decoration: none;
+#sideBar .sideBar-forum {
+  width: 45px;
+  height: 75px;
+  position: absolute;
+  cursor: pointer;
+  left: 0;
+  top: 320px;
+  background: url(../img/sidebar.png) -55px -152px no-repeat;
+  z-index: 999;
+}
+#sideBar .sideBar-forum:hover {
+  background-position: -55px -228px;
+}
+#sideBar .sideBar-service {
+  width: 45px;
+  height: 75px;
+  position: absolute;
+  cursor: pointer;
+  left: 0;
+  top: 395px;
+  background: url(../img/sidebar.png) -55px -304px no-repeat;
+  z-index: 999;
+}
+#sideBar .sideBar-service:hover {
+  background-position: -55px -379px;
+}
+#sideBar .sideBar-share {
+  width: 45px;
+  height: 75px;
+  position: absolute;
+  cursor: pointer;
+  left: 0;
+  top: 470px;
+  background: url(../img/sidebar.png) 0 -947px no-repeat;
+  z-index: 999;
+}
+#sideBar .sideBar-share:hover {
+  background-position: -55px -947px;
+}
+#sideBar .sideBar-idea {
+  width: 45px;
+  height: 75px;
+  position: absolute;
+  cursor: pointer;
+  left: 0;
+  top: 545px;
+  background: url(../img/sidebar.png) -55px -456px no-repeat;
+  z-index: 999;
+}
+#sideBar .sideBar-idea:hover {
+  background-position: -55px -532px;
+}
+#sideBar .sideBar-top {
+  width: 45px;
+  height: 75px;
+  position: absolute;
+  cursor: pointer;
+  left: 0;
+  bottom: 20px;
+  background: url(../img/sidebar.png) -55px -608px no-repeat;
+  z-index: 999;
+}
+#sideBar .sideBar-top:hover {
+  background-position: -55px -684px;
 }
 
-/*表单部分*/
-#registerBox {
-  margin-left: 250px;
+/*我的购物车*/
+#car-top {
+  height: 100px;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 50px;
+  background-color: #ffffff;
 }
-#registerBox .label {
-  width: 7em;
-  font-size: 14px;
-  text-align: right;
-  line-height: 46px;
-  color: #333333;
+#car-top .car-top-inner {
+  width: 1200px;
+  margin: 0 auto;
+  height: 100px;
+  line-height: 100px;
+  font-size: 24px;
 }
-#registerBox .input {
-  outline: none;
-  width: 300px;
-  height: 46px;
+#car-top .car-top-inner .logo {
+  vertical-align: middle;
+  display: inline-block;
+  margin-right: 30px;
 }
-#registerBox .row {
-  padding: 10px 0;
+#car-top .car-top-inner .logo img {
+  display: block;
 }
-#registerBox .lastrow {
-  padding: 10px 0 25px 0;
+
+#carBox {
+  width: 1200px;
+  margin: 0 auto 50px;
+  overflow: hidden;
 }
-#registerBox .agree {
-  font-size: 14px;
-  color: #999999;
-  padding-left: 99px;
-}
-#registerBox .send {
-  padding-left: 99px;
-}
-#registerBox .send input {
-  width: 300px;
+#carBox .carTitle {
+  width: 100%;
   height: 50px;
-  border: 0 none;
-  cursor: pointer;
-  font-size: 20px;
-  color: #fff;
-  background: orange;
+  line-height: 50px;
+  color: #333;
+  font-size: 14px;
+  font-family: "微软雅黑";
+  background-color: #ffffff;
+  padding: 10px 0;
+  background: lightpink;
+}
+#carBox .carTitle .col1 {
+  width: 110px;
+  float: left;
+}
+#carBox .carTitle .col2 {
+  width: 480px;
+  float: left;
+}
+#carBox .carTitle .col3 {
+  width: 100px;
+  text-align: center;
+  float: left;
+}
+#carBox .carTitle .col4 {
+  width: 190px;
+  text-align: center;
+  float: left;
+}
+#carBox .carTitle .col5 {
+  width: 110px;
+  text-align: center;
+  float: left;
+}
+#carBox .carTitle .col6 {
+  width: 160px;
+  text-align: center;
+  float: left;
+}
+#carBox .carInner {
+  background-color: #ffffff;
+  margin-top: 10px;
+  width: 100%;
 }
 
 /* 底部 */
@@ -326,4 +459,4 @@
   top: 0;
 }
 
-/*# sourceMappingURL=register.css.map */
+/*# sourceMappingURL=car.css.map */
