--- a/src/css/index.css
+++ b/src/css/index.css
@@ -128,6 +128,82 @@
   color: #fa0;
 }
 
+/*侧边栏工具条*/
+#sideBar {
+  width: 45px;
+  height: 100%;
+  position: fixed;
+  right: 0;
+  top: 0;
+  min-height: 100%;
+  background-color: #e0e0e0;
+}
+#sideBar .sideBar-forum {
+  width: 45px;
+  height: 75px;
+  position: absolute;
+  cursor: pointer;
+  left: 0;
+  top: 320px;
+  background: url(../img/sidebar.png) -55px -152px no-repeat;
+  z-index: 999;
+}
+#sideBar .sideBar-forum:hover {
+  background-position: -55px -228px;
+}
+#sideBar .sideBar-service {
+  width: 45px;
+  height: 75px;
+  position: absolute;
+  cursor: pointer;
+  left: 0;
+  top: 395px;
+  background: url(../img/sidebar.png) -55px -304px no-repeat;
+  z-index: 999;
+}
+#sideBar .sideBar-service:hover {
+  background-position: -55px -379px;
+}
+#sideBar .sideBar-share {
+  width: 45px;
+  height: 75px;
+  position: absolute;
+  cursor: pointer;
+  left: 0;
+  top: 470px;
+  background: url(../img/sidebar.png) 0 -947px no-repeat;
+  z-index: 999;
+}
+#sideBar .sideBar-share:hover {
+  background-position: -55px -947px;
+}
+#sideBar .sideBar-idea {
+  width: 45px;
+  height: 75px;
+  position: absolute;
+  cursor: pointer;
+  left: 0;
+  top: 545px;
+  background: url(../img/sidebar.png) -55px -456px no-repeat;
+  z-index: 999;
+}
+#sideBar .sideBar-idea:hover {
+  background-position: -55px -532px;
+}
+#sideBar .sideBar-top {
+  width: 45px;
+  height: 75px;
+  position: absolute;
+  cursor: pointer;
+  left: 0;
+  bottom: 20px;
+  background: url(../img/sidebar.png) -55px -608px no-repeat;
+  z-index: 999;
+}
+#sideBar .sideBar-top:hover {
+  background-position: -55px -684px;
+}
+
 /* top-nav部分 */
 #top-nav {
   height: 100px;
@@ -557,6 +633,9 @@
 #footer .footerMain .footer-list .innerList li a {
   color: #666;
   font-size: 14px;
+}
+#footer .footerMain .footer-list .innerList li a:hover {
+  color: #ff7f00;
 }
 #footer .footerMain .footer-prize, #footer .footerMain .footer-prize .prize-item1, #footer .footerMain .footer-prize .prize-item2, #footer .footerMain .footer-prize .prize-item3, #footer .footerMain .footer-prize .prize-item4, #footer .footerMain .footer-prize .prize-item5, #footer .footerMain .footer-prize .prize-item6, #footer .footerMain .footer-prize .prize-item7, #footer .footerMain .footer-prize .prize-item8, #footer .footerMain .footer-prize .prize-item9 {
   height: 203px;
