--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -245,16 +245,27 @@ $fontSize:14px;
             }
         } 
     }
-    .hiddenNav{
-        width: 100%;
-        height: 100px;
-        // background: lightgreen;
-        position: relative;
-        top: -100px;
-        display: block;
-    }
+    // .hiddenNav{
+    //     width: 100%;
+    //     height: 100px;
+    //     // background: lightgreen;
+    //     position: relative;
+    //     top: -100px;
+    //     display: block;
+    // }
 }
 /* 轮播图部分 */
+.munuActive{
+    background-color: #fff;
+    border: 1px solid #ff9500;
+    border-right: none;
+    span{
+        color: #333;
+    }
+}
+// .olActive{
+
+// }
 #bannerBox{
     width:$width;
     height: 430px;
@@ -263,16 +274,16 @@ $fontSize:14px;
     .banner-menu{
         width: 230px;
         height: 430px;
-        background: #323436;
         float: left;
+        background: #323436;
+        position: relative;
         li{
-            margin-top: 1px;
-            height: 45px;
-            width: 230px;
-            line-height: 45px;
+            height: 46px;
+            width: 134px;
+            line-height: 46px;
             padding: 0 40px 0 55px;
             position: relative;
-            i{
+            .menulogo{
                 width: 19px;
                 height: 16px;
                 // background: lightsalmon;
@@ -312,18 +323,61 @@ $fontSize:14px;
                 display: inline-block;
                 width: 135px;
                 font-size: 16px;
+                margin-top: 2px;
+                height: 46px;
+                line-height: 46px;
             }
         }
+    }
+    .second-menu{
+        width: 300px;
+        height: 428px;
+        position: absolute;
+        left: 230px;
+        top: 0;
+        background: #fff;
+        display: none;
+        z-index: 999;
+        border: 1px solid #ff9500;
+        border-left: none;
     }
     .banner{
         height: 430px;
         width: 1200 - 230px;
         float: right;
-        overflow: hidden;
+        // overflow: hidden;
+        position: relative;
+        ul li{
+            float: left;
+        }
         img{
             height: 430px;
             width: 1200 - 230px;
-            float: left;
+            display: block;
+        }
+        .leftBtn{
+            width: 46px;
+            height: 70px;
+            position: absolute;
+            left: 0;
+            top: 50%;
+            margin-top: -35px;
+            background: url(../img/sprite.png) 0 -279px;
+            &:hover{
+                background: url(../img/sprite.png) 0 -379px;
+            }
+        }
+        .rightBtn{
+            width: 46px;
+            height: 70px;
+            position: absolute;
+            right: 0;
+            top: 50%;
+            margin-top: -35px;
+            background: url(../img/sprite.png) 0 -479px;
+            &:hover{
+                background: url(../img/sprite.png) 0 -579px;
+            }
         }
     }
 }
